--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,9 @@
 * {
   box-sizing: border-box; }
 
+html {
+  height: 100%; }
+
 body {
   background: #444;
   color: #fff;
@@ -191,6 +194,15 @@ main {
     background-color: #444;
     text-shadow: 2px 2px 2px black; }
 
+footer#bottom_menu {
+  display: block;
+  background-color: #000;
+  z-index: 1;
+  position: fixed;
+  clear: both;
+  width: 100%;
+  top: 95%; }
+
 @media screen and (min-width: 1171px) {
   main#about {
     padding-top: 0; }
@@ -270,16 +282,12 @@ main {
         width: 18rem;
         padding: 0.2rem;
         font-size: 1rem; }
-    main .one-line:before {
-      background: none; }
-    main .one-line:after {
-      background: none; }
   .about-info {
     grid-template-areas: "bioimage" "bio" "job1" "job2" "job3";
     grid-template-columns: 1fr; }
   main#home h1.lg-heading {
     line-height: 1;
-    font-size: 2.5rem; }
+    font-size: 2.2rem; }
   main#home h1.text-secondary {
     display: block; }
   main#home span.qaSign {
@@ -313,14 +321,15 @@ main {
     div.menu-branding.show {
       transform: translate3d(0, 0, 0); }
   .menu-nav {
-    height: 76vh;
+    height: 65vh;
     transform: translate3d(100%, 0, 0);
     font-size: 24px; }
   .menu-branding {
-    height: 23vh;
+    height: 35vh;
     transform: translate3d(-100%, 0, 0); }
     .menu-branding .portrait {
-      width: 150px;
-      height: 150px; }
+      margin-top: 0.6rem;
+      width: 120px;
+      height: 120px; }
   div.projects {
     grid-template-columns: repeat(1, 1fr); } }
