--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -120,13 +120,6 @@
         font-size: 1rem;
       }
     }
-
-    & .one-line:before {
-      background: none;
-    }
-    & .one-line:after {
-      background: none;
-    }
   }
 
   .about-info {
@@ -142,7 +135,7 @@
   main#home {
     & h1.lg-heading {
       line-height: 1;
-      font-size: 2.5rem;
+      font-size: 2.2rem;
     }
     & h1.text-secondary {
       display: block;
@@ -191,16 +184,17 @@
   }
 
   .menu-nav {
-    height: 76vh;
+    height: 65vh;
     transform: translate3d(100%, 0, 0);
     font-size: 24px;
   }
   .menu-branding {
-    height: 23vh;
+    height: 35vh;
     transform: translate3d(-100%, 0, 0);
     .portrait {
-      width: 150px;
-      height: 150px;
+      margin-top: 0.6rem;
+      width: 120px;
+      height: 120px;
     }
   }
 
