--- a/css/work.css
+++ b/css/work.css
@@ -440,7 +440,7 @@ footer#bottom_menu {
 }
 
 body#bg-img {
-  background-image: url(../img/project.jpg);
+  background-image: url(../img/Project.jpg);
 }
 
 .projects {
