--- a/css/work.css
+++ b/css/work.css
@@ -441,6 +441,7 @@ footer#bottom_menu {
 
 body#bg-img {
   background-image: url(../img/Project.jpg);
+  background-position: center;
 }
 
 .projects {
