--- a/scss/about.scss
+++ b/scss/about.scss
@@ -7,7 +7,12 @@
     "job1 job2  job3";
   grid-template-columns: repeat(3, 1fr);
 }
-
+body#bg-img {
+  background: url(../img/testing.png);
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
+}
 .bio-image {
   grid-area: bioimage;
   margin: auto;
