--- a/scss/about.scss
+++ b/scss/about.scss
@@ -8,7 +8,7 @@
   grid-template-columns: repeat(3, 1fr);
 }
 body#bg-img {
-  background: url(../img/testing.png);
+  background: url(img/testing.png);
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
