--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,7 @@ html {
   height: 100%;
 }
 body {
+  @include background();
   background: $primary-color;
   color: set-text-color($primary-color);
   height: 100%;
