--- a/scss/work.scss
+++ b/scss/work.scss
@@ -1,7 +1,7 @@
 @import "main";
 
 body#bg-img {
-  background-image: url(../img/Project.jpg);
+  background-image: url(../img/project.jpg);
 }
 
 .projects {
